2002-03-19  John Harper  <jsh@unfactored.org>

	* Merged changes from HEAD:

	2002-03-09  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/state/wm-spec.jl (supported-atoms): updated to
	include all atoms we recognize, not just top-level things

	* sawfish/wm/state/maximize.jl (window-maximized-fullscreen-p,
	maximize-window-fullscreen, maximize-window-fullscreen-toggle):
	support a new type of maximization, called `fullscreen'. In
	this mode the window's borders are removed and it fills the
	entire area of the head (even if it's size hints would dictate
	otherwise)

	* sawfish/wm/state/wm-spec.jl: support _NET_WM_STATE_FULLSCREEN

	(the above two changes fix #73970)

	* sawfish/wm/util/ping.jl: actually tested this code (Gtk+ 2
	supports the protocol). Fixed some bugs. Don't use X server
	timestamps as the unique id anymore (since they may not be
	unique), use a unique sequence number instead

	(ping-window): TIMEOUT-MSECS is now optional and defaults to
	one second

	2002-03-03  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/placement/off-center.jl (workarea-for): replaced
	by a single call to maximize-find-workarea

	* sawfish/wm/placement.jl: added `#:head-fallback t' in some
	calls to maximize-find-workarea. Should fix #73297

	* sawfish/wm/state/maximize.jl (maximize-find-workarea):
	removed extra #!key token

	2002-02-22  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/viewport.jl (viewport-load-state): add the current
	viewport offsets into any set window geometries

	* sawfish/wm/state/wm-spec.jl (set-ws-hints): fixed using
	screen-width instead of screen-height (noticed by
	tal00r@ecs.soton.ac.uk)

	2002-02-21  John Harper  <jsh@unfactored.org>

	* sawfish/wm/stacking.jl (stacking-add-window): don't put
	windows below the default depth just because their parent is.
	Fixes #67978

	2002-02-17  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands/move-resize.jl (move-resize-map): added
	any-off2 and any-off3 bindings. Fixes #67134
