@@ -1,3 +1,8 @@
+2002-04-02  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/gnome/integration.jl (gnome-use-capplet): removed
+	this option; marked it obsolete
+
 2002-03-19  John Harper  <jsh@unfactored.org>
 
 	* Merged changes from HEAD:
